--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
