--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^12.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
